Realizando paginações, e sincronizando os dados paginados do back com o frontend

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -29,6 +29,7 @@
               "src/assets/css/bootstrap.css"
             ],
             "scripts": [
+              "src/assets/js/bootstrap.js"
             ]
           },
           "configurations": {
