--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
-    "bootstrap": "^4.5.2",
+    "ag-grid-angular": "^31.3.2",
     "jwt-decode": "^3.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
